tests/baselines/reference/parserErrorRecovery_ObjectLiteral2.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ObjectLiterals/parserErrorRecovery_ObjectLiteral2.ts (2 errors) ====
    var v = { a
    return;
    ~~~~~~
!!! error TS1005: ':' expected.
          ~
!!! error TS1005: ':' expected.